HOCS-5465: add correspondent type name
A previous change caused the correspondent type name to not return with
the `getCorrespondents` method. This change ensures the type name is
appended with the correspondents.